--- a/_normalize.scss
+++ b/_normalize.scss
@@ -4,6 +4,7 @@
    Mixins
    ========================================================================== */
 @import "../sizing";
+$text-color: #333 !default;
 
 /* ==========================================================================
    HTML5 display definitions
@@ -156,7 +157,9 @@ b, strong {
   font-weight: bold; }
 
 blockquote {
-  @include rem( margin, 1.2rem 0 1.2rem 1.2rem);
+  @include rem( margin, 1.2rem 0 );
+  @include rem( padding-left, .6rem);
+  @include rem( border-left, .6rem solid $text-color );
 }
 
 /*
@@ -261,7 +264,28 @@ dd {
  */
 
 menu, ol, ul {
+  list-style-position: outside;
   @include rem( padding, 0 0 0 1.2rem );
+}
+
+ol {
+  list-style-type: decimal;
+  ol {
+    list-style-type: upper-alpha;
+    ol {
+      list-style-type: lower-alpha;
+    }
+  }
+}
+
+ul {
+  list-style-type: disc;
+  ul {
+    list-style-type: square;
+    ul {
+      list-style-type: circle;
+    }
+  }
 }
 
 li {
