--- a/_normalize.scss
+++ b/_normalize.scss
@@ -88,9 +88,18 @@ body {
 
 a {
   &:focus {
-    outline: thin dotted; }
+    outline: thin dotted;
+  }
   &:active, &:hover {
-    outline: 0; } }
+    outline: 0;
+  }
+  &[href$=pdf] {
+    @include rem( padding-right, 1.2rem );
+    background-image: url(/lib_style/img/icon_pdf.png);
+    background-position: 100% 0%;
+    background-repeat: no-repeat;
+  }
+}
 
 /*
  * Improves readability when focused and also mouse hovered in all browsers.
