different location for _sizing.scss

--- a/_normalize.scss
+++ b/_normalize.scss
@@ -3,7 +3,7 @@
 /* =============================================================================
    Mixins
    ========================================================================== */
-@import "../sizing";
+@import "sizing";
 $text-color: #333 !default;
 
 /* ==========================================================================
