--- a/_normalize.scss
+++ b/_normalize.scss
@@ -54,6 +54,7 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
   -ms-text-size-adjust: 100%;     /* 2 */
   font-family: sans-serif;
+  color: $text-color;
 }
 
 /*
@@ -164,25 +165,12 @@ h6 {
 abbr[title] {
   border-bottom: 1px dotted; }
 
-/*
- * Addresses style set to `bolder` in FF3+, S4/5, Chrome.
- */
-
-b, strong {
-  font-weight: bold; }
-
 blockquote {
   @include rem( margin, 1.2rem 0 );
-  @include rem( padding-left, .6rem);
+  @include rem( padding, 0 0 0 .6rem);
+  border: 0;
   @include rem( border-left, .6rem solid $text-color );
 }
-
-/*
- * Addresses styling not present in S5, Chrome.
- */
-
-dfn {
-  font-style: italic; }
 
 /*
  * Addresses styling not present in IE6/7/8/9.
@@ -190,7 +178,8 @@ dfn {
 
 mark {
   background: #ff0;
-  color: #000; }
+  color: #000;
+}
 
 /*
  * Addresses margins set differently in IE6/7.
@@ -218,7 +207,8 @@ code, kbd, pre, samp {
 pre {
   white-space: pre;
   white-space: pre-wrap;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+}
 
 /*
  * Addresses CSS quotes not supported in IE6/7.
@@ -228,14 +218,17 @@ q {
   quotes: none;
   &:before, &:after {
     content: '';
-    content: none; } }
+    content: none;
+  }
+}
 
 /*
  * Addresses `quotes` property not supported in S4.
  */
 
 small {
-  font-size: 75%; }
+  font-size: 75%;
+}
 
 /*
  * Prevents `sub` and `sup` affecting `line-height` in all browsers.
@@ -246,17 +239,20 @@ sub {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
   vertical-align: baseline;
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 /* ==========================================================================
    Lists
