--- a/_normalize.scss
+++ b/_normalize.scss
@@ -1,4 +1,4 @@
-/*! based on normalize.css v1.0.0 | MIT License | git.io/normalize */
+/*! v1.2.0, based on normalize.css v1.0.0 | MIT License | git.io/normalize */
 
 /* =============================================================================
    Mixins
