--- a/normalize.scss
+++ b/normalize.scss
@@ -1,1 +1,6 @@
+/*
+ * Inb4 cool story bro:
+ * I spent hours trying to get gulp to compile _normalize.scss, until I tried
+ * making this shell of a file. Apparently gulp doesn't like naked Sass partials.
+ */
 @import "normalize";
