--- a/_normalize.scss
+++ b/_normalize.scss
@@ -1,12 +1,13 @@
-/*! v2.1.0, based on normalize.css v3.0.1 | MIT License | git.io/normalize */
+/*! v2.2.1, based on normalize.css v3.0.1 | MIT License | git.io/normalize */
 
 /* =============================================================================
    Mixins
    ========================================================================== */
-$base-font-size: 15px !default; // otherwise inherited from _rem
+$base-font-size: 16px !default; // otherwise inherited from _rem
 $text-color: #333 !default;
 $background-color: #ccc !default;
-$lh: 1.2rem !default; // line-height unit, in rem
+$line-height-multiplier: 1.2 !default;
+$lh: $line-height-multiplier * 1rem !default;
 
 @import "assets/_rem.scss";
 
